[tool.poetry]
name = "nowplaying-impression"
version = "0.1.0"
description = ""
authors = ["Chris Barry <2490974+ChrisW-B@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
pillow = "^8.2.0"
inky = "^1.2.0"
hitherdither = {git = "https://www.github.com/hbldh/hitherdither"}
rpi = "^0.0.1"
"rpi.gpio" = "^0.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "piwheels"
url = "https://www.piwheels.org/simple/"