[tool.poetry]
name = "nowplaying-impression"
version = "0.1.0"
description = ""
authors = ["Chris Barry <2490974+ChrisW-B@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pillow = "^9.0.0"
inky = "^1.2.0"
spotipy = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "piwheels"
url = "https://www.piwheels.org/simple/"