[tool.poetry]
name = "nowplaying-impression"
version = "0.1.0"
description = ""
authors = ["Chris Barry <2490974+ChrisW-B@users.noreply.github.com>"]

[tool.poetry.scripts]
start = "nowplaying_impression.__main__:main"

[tool.poetry.dependencies]
python = "^3.7"
pillow = "^8.2.0"
inky = {extras = ["rpi", "example-depends"], version = "^1.4.0"}
spotipy = "2.19.0"
hitherdither = {git = "https://www.github.com/hbldh/hitherdither"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "piwheels"
url = "https://www.piwheels.org/simple/"